# i3-fe-core

./: .gitattributes  .gitignore  ADOPTION.md  CONFORMANCE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
reference/: i3-standard.txt  ng-sec-standard.txt
src/i3_fe_core/: __init__.py  testing.py
src/i3_fe_core/app/: __init__.py  factory.py  lifecycle.py
src/i3_fe_core/config/: __init__.py  identity.py  logging_setup.py  settings.py
src/i3_fe_core/conformance/: __init__.py  checks.py
src/i3_fe_core/discrepancy/: __init__.py  models.py  routes.py  service.py
src/i3_fe_core/gis/: __init__.py  cache.py  dataset.py
src/i3_fe_core/logging/: __init__.py  jws_signer.py  logevent.py  logging_client.py
src/i3_fe_core/notify/: __init__.py  sip_notifier.py
src/i3_fe_core/observability/: __init__.py  metrics.py
src/i3_fe_core/runtime/: __init__.py  worker.py
src/i3_fe_core/security/: __init__.py  peer_auth.py  tls.py
tests/app/: test_factory.py  test_lifecycle.py
tests/config/: test_identity.py  test_settings.py
tests/conformance/: test_conformance_suite.py
tests/discrepancy/: test_dr_models.py  test_dr_routes.py  test_dr_service.py
tests/gis/: test_cache.py
tests/logging/: test_jws_signer.py  test_logevent.py  test_logging_client.py
tests/notify/: test_sip_notifier.py
tests/observability/: test_metrics.py
tests/runtime/: test_worker.py
tests/security/: test_peer_auth.py  test_tls.py
tests/state/: test_element_state.py  test_service_state.py  test_store.py
tests/time/: test_ntp.py  test_timestamps.py
(+9 files in other folders)
