[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "i3-fe-core"
version = "0.3.0"
description = "Core library for NENA i3 Functional Elements (NENA-STA-010.3f-2021)"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "starlette>=1.3.1",
    "uvicorn[standard]>=0.30",
    "gunicorn>=22.0",
    "ntplib>=0.4",
    "cryptography>=42.0",
    "prometheus_client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx",          # also used for test client
]
security = ["bandit>=1.7", "pip-audit>=2.7"]

[tool.hatch.build.targets.wheel]
packages = ["src/i3_fe_core"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.envs.default]
features = ["dev"]
